--- a/script.arb
+++ b/script.arb
@@ -24,17 +24,18 @@ class Board
       else print "|_#{piece}_|" end
         x += 1
     end
+    $pieces_arr = $new_arr
   end
 end
 
 class Computer
-  def initialize
+  def initialize 
     $rand_num = rand(1..9)
+    if $pick == $rand_num then self.initialize end  #(!)
   end
   def change_num
     $new_num_arr = $new_arr.select { |element| element.class == Integer}
     $rand_num = rand($new_num_arr[0]..$new_num_arr.last)
-    puts $rand_num
   end
 end
 class Player_Input
@@ -62,14 +63,23 @@ class Game_score
       else $new_arr.push(piece)
       end
     end
-    puts $new_arr 
-  end
-  def state
-
+    def new_values
+      $new_arr = []
+      puts "You picked #{$pick}, and computer picked #{$rand_num}"
+      for piece in $pieces_arr
+        if piece.to_i == $pick.to_i
+          $new_arr.push("X")
+        elsif piece.to_i == $rand_num.to_i
+          $new_arr.push("0")
+        else $new_arr.push(piece)
+        end
+       end
+    end
   end
 end
+
 b = Board.new(9)
-puts "Do you want to go first"
+puts "Do you want to go first" #(!)
 first_round = gets
 player = Player_Input.new(first_round)
 player.state_first_round
@@ -81,5 +91,13 @@ game = Game_score.new
 b.new_board
 puts "What number would you like to pick next"
 pick = gets
-b.new_board
+b.player_pick(pick)
 comp.change_num
+game.new_values
+b.new_board
+puts "What number would you like to pick next"
+pick = gets
+b.player_pick(pick)
+comp.change_num
+game.new_values
+b.new_board
