--- a/script.arb
+++ b/script.arb
@@ -27,9 +27,9 @@ end
 
 class Computer
   def initialize 
-    $rand_num = 5
+    $rand_num = rand[1, 3, 7, 9]
     while $pick.to_i == $rand_num 
-      $rand_num = rand(1..9)
+      $rand_num = rand[1, 3, 7, 9]
     end
   end
   def change_num
