--- a/script.arb
+++ b/script.arb
@@ -27,28 +27,26 @@ end
 
 class Computer
   def initialize 
-    $rand_num = rand[1, 3, 7, 9]
+    $rand_num = [1, 3, 7, 9].shuffle.first
     while $pick.to_i == $rand_num 
-      $rand_num = rand[1, 3, 7, 9]
+      $rand_num = [1, 3, 7, 9].shuffle.first
     end
   end
   def change_num
     @new_num_arr = $new_arr.select { |element| element.class == Integer}
     @new_num_arr = @new_num_arr - [$pick.to_i]
     $rand_num = @new_num_arr.shuffle.first()
-    puts "the rng is #{$rand_num}"
   end
 end
 class Player_Input
   def initialize(first_round)
-    @first_round = first_round
+    @first_round = first_round.to_i
   end
   def state_first_round
-    if @first_round.downcase() == "no"  
-      puts "a"
-    elsif @first_round.downcase() == "yes"  
-      player_first = true 
-      puts player_first
+    if @first_round == 2  
+      $sign_arr = ["O", "X"]
+    else 
+      $sign_arr = ["X", "O"]
     end
   end
   def player_pick(pick)
@@ -85,7 +83,7 @@ class Game_score
     end
   end
   def check_if_won
-      for sign in ["O", "X"]
+      for sign in $sign_arr
         $more_rounds = false
         if $new_arr[0] == sign && $new_arr[1] == sign && $new_arr[2] == sign ||
            $new_arr[3] == sign && $new_arr[4] == sign && $new_arr[5] == sign ||
@@ -103,7 +101,7 @@ class Game_score
 end
 
 b = Board.new(9)
-puts "Do you want to go first" #(!)
+puts "Do you want to go first[1] or no[2]" #(!)
 first_round = gets
 player = Player_Input.new(first_round)
 player.state_first_round
