--- a/script.arb
+++ b/script.arb
@@ -43,12 +43,7 @@ class Player_Input
     @first_round = first_round.to_i
   end
   def state_first_round
-    if @first_round == 2  
-      $sign_arr = ["X", "O"]
-      $comp_first = 1
-    else 
-      $sign_arr = ["O", "X"]
-    end
+    @first_round == 2 ? $comp_first = 1 : $comp_first = 0
   end
   def player_pick(pick)
     $pick = pick
@@ -61,7 +56,11 @@ end
 
 class Game_score
   def initialize
-    puts "You picked #{$pick}, and computer picked #{$rand_num}"
+    $new_arr = []
+    if $comp_first == 1
+      puts "Computer picked #{$rand_num}"
+    else
+    puts "You picked #{$pick}, and computer picked #{$rand_num}" end
     for piece in $pieces_arr
       if piece.to_i == $pick.to_i
         $new_arr.push("X")
@@ -72,7 +71,7 @@ class Game_score
     end
     def new_values
       $new_arr = []
-      if $sign_arr == ["X", "O"] 
+      if $comp_first == 1
         puts "Computer picked #{$rand_num}"
       else
       puts "You picked #{$pick}, and computer picked #{$rand_num}" end
@@ -86,8 +85,11 @@ class Game_score
        end
     end
   end
+  def assign_sign
+    $comp_first == 1 ? @sign_arr = ["O", "X"] : @sign_arr = ["X", "O"]
+  end
   def check_if_won
-      for sign in ["O", "X"]
+      for sign in @sign_arr
         $more_rounds = false
         if $new_arr[0] == sign && $new_arr[1] == sign && $new_arr[2] == sign ||
            $new_arr[3] == sign && $new_arr[4] == sign && $new_arr[5] == sign ||
@@ -97,29 +99,31 @@ class Game_score
            $new_arr[2] == sign && $new_arr[5] == sign && $new_arr[8] == sign ||
            $new_arr[0] == sign && $new_arr[4] == sign && $new_arr[8] == sign ||
            $new_arr[2] == sign && $new_arr[4] == sign && $new_arr[6] == sign
-           if sign == "O" then @show_sign = "You LOST"
-           else @show_sign = "You WON!" end
+           if sign == "O" then $show_sign = "You LOST"
+           else $show_sign = "You WON!" end
         else $more_rounds = true end
       end
-      puts @show_sign
+      puts $show_sign
   end
 end
 
 b = Board.new(9)
+num_of_rounds = 0
 puts "Do you want to go first[1] or no[2]" #(!)
 first_round = gets
 player = Player_Input.new(first_round)
 player.state_first_round
-if $sign_arr == ["X", "O"] 
+if $comp_first == 1
   comp = Computer.new
   game = Game_score.new
   b.new_board
+  num_of_rounds += 1
 end
 pick = 0
 puts "What number would you like to pick"
 pick = gets
 player.player_pick(pick)
-if $sign_arr == ["X", "O"] 
+if $comp_first == 1
   comp.change_num
   game.new_values
 else
@@ -132,15 +136,16 @@ pick = gets
 player.player_pick(pick)
 comp.change_num
 game.new_values
+game.assign_sign
 game.check_if_won
 b.new_board
-num_of_rounds = 0
 while $more_rounds == true && num_of_rounds <= 2
   puts "What number would you like to pick next"
   pick = gets
   player.player_pick(pick)
   comp.change_num
   game.new_values
+  game.assign_sign
   game.check_if_won
   b.new_board
   num_of_rounds +=1
