--- a/script.arb
+++ b/script.arb
@@ -56,6 +56,7 @@ end
 
 class Game_score
   def initialize
+    @show_sign = ""
     $new_arr = []
     if $comp_first == 1
       puts "Computer picked #{$rand_num}"
@@ -85,9 +86,6 @@ class Game_score
        end
     end
   end
-  def assign_sign
-    $comp_first == 1 ? @sign_arr = ["O", "X"] : @sign_arr = ["X", "O"]
-  end
   def check_if_won
       for sign in ["O", "X"]
         $more_rounds = false
@@ -99,11 +97,11 @@ class Game_score
            $new_arr[2] == sign && $new_arr[5] == sign && $new_arr[8] == sign ||
            $new_arr[0] == sign && $new_arr[4] == sign && $new_arr[8] == sign ||
            $new_arr[2] == sign && $new_arr[4] == sign && $new_arr[6] == sign
-           if sign == "O" then $show_sign = "You LOST"
-           else $show_sign = "You WON!" end
-        else $more_rounds = true end
+           if sign == "O" then @show_sign = "You LOST"
+           else @show_sign = "You WON!" end
+        elsif @show_sign == "" then $more_rounds = true end
       end
-      puts $show_sign
+      puts @show_sign
   end
 end
 
@@ -136,7 +134,6 @@ pick = gets
 player.player_pick(pick)
 comp.change_num
 game.new_values
-game.assign_sign
 game.check_if_won
 b.new_board
 while $more_rounds == true && num_of_rounds <= 2
@@ -145,7 +142,6 @@ while $more_rounds == true && num_of_rounds <= 2
   player.player_pick(pick)
   comp.change_num
   game.new_values
-  game.assign_sign
   game.check_if_won
   b.new_board
   num_of_rounds +=1
